--- a/_config.yml
+++ b/_config.yml
@@ -18,12 +18,21 @@ permalink: /:year/:month/:title/
 # sass:
 #  style: compressed
 
+collections:
+  category:
+    output: true
+
 defaults:
 - scope:
     path: ""
     type: pages
   values:
     layout: default
+- scope:
+    path: ""
+    type: category
+  values:
+    layout: "category"
 - scope:
     path: ""
     type: posts
