--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@11ty/eleventy": "^2.0.1",
     "@11ty/eleventy-plugin-rss": "^1.2.0",
+    "@picocss/pico": "^2.1.1",
     "eleventy-sass": "^2.2.6",
     "luxon": "^3.7.2"
   }
